Landing Page 05/style.scss
// GOOGLE FONT IMPORT
@import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap");

// FONT
$font-commissioner: "Commissioner", sans-serif;

// COLORS
$moderate-cyan: hsl(176, 50%, 47%);
$dark-cyan: hsl(176, 72%, 28%);
$black: hsl(0, 0%, 0%);
$dark-gray: hsl(0, 0%, 48%);
$very-light-gray-white: hsl(0, 0%, 98%);
$light-gray: hsl(0, 0%, 81%);
$white: hsl(0, 0%, 100%);

// CSS RESET

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

* {
  margin: 0;
  padding: 0;
}

// GLOBAL
/* Width and height of the scrollbar */
::-webkit-scrollbar {
  width: 2px;
  height: 2px;
}

/* Track */
::-webkit-scrollbar-track {
  background: $very-light-gray-white;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: $dark-gray;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: $dark-gray;
}

/* Corner */
::-webkit-scrollbar-corner {
  background: $very-light-gray-white;
}

// Progress bar
progress {
  -webkit-appearance: none;
  appearance: none;
}

::-webkit-progress-bar {
  background-color: $very-light-gray-white;
  border-radius: 10px;
}

::-webkit-progress-value {
  background-color: $moderate-cyan;
  border-radius: 10px;
}


// MIXINS
@mixin cardContainer($width : 85%, $margin: 20px 15px, $padding-left: 4rem, $gap:10px){
  .card-container {
    border: 1px solid $light-gray;
    width:$width;
      margin: $margin;
    border-radius: 5px;

  
    &.mahogany-special {
      pointer-events: none;
      opacity: 0.5;
      background-color: $very-light-gray-white;
    }

    .header-container {
      display: flex;
      flex-direction: column;
      row-gap: $gap;

      .pledge-amount-heading {
        padding-left: $padding-left;
        font-size: 0.95rem;
        color: $moderate-cyan;
        font-weight: 600;
      }
    }

    div[data-pledge-id] {
      display: flex;
      gap: 10px;
      padding: 0 20px;
      margin-bottom: 20px;
      .pledge-amount-span {
        align-self: center;
        font-size: 1.1rem;
        font-weight: 450;
      }
    }
    .input-label-container {
      display: flex;
      gap: 20px;
      padding-inline: 20px;
      padding-top: 10px;

      &:hover {
        color: $moderate-cyan;

        .custom-radio input[type="radio"] {
          border: 1px solid $moderate-cyan;
        }
      }

      .inner-circle,
      input[type="radio"] {
        cursor: pointer;
      }

      .span-label {
        font-weight: bold;
        align-self: center;
        cursor: default;
        font-size: 1.1rem;
      }

      .custom-radio-others {
        top: 1rem;
      }

      .custom-radio-others,
      .custom-radio {
        position: relative;

        // select all data-id attribute value that ends with "select".
        &[data-id$="select"]{
          display:none;
        }

        .inner-circle {
          content: "";
          width: 12px;
          height: 12px;
          background-color: transparent;
          border-radius: 50%;
          position: absolute;
          top: 47%;
          left: 50%;
          transform: translate(-50%, -50%);
          transition: background-color 0.3s;
        }

        input[type="radio"] {
          appearance: none;
          -webkit-appearance: none;
          -moz-appearance: none;
          width: 25px;
          height: 25px;
          border: 1px solid $light-gray;
          border-radius: 50%;
          position: relative;

          &:checked + .inner-circle {
            background-color: $moderate-cyan;
          }
        }
      }
    }

    .backed-p {
      padding: 20px;
      color: $dark-gray;
      line-height: 1.5rem;
    }

      .select-reward-button {
      width: 130px;
      height: 50px;
      border-radius: 20px;
      border: 1px solid $moderate-cyan;
      background-color: $moderate-cyan;
      color: $very-light-gray-white;
      font-weight: bold;
      cursor: pointer;
      position: relative;
      bottom: 10px;
      margin-left:15px;   
      text-transform: capitalize;
    }

    .pledge-content-container {
      position: relative;
      display: flex;
      flex-direction: column;
      align-items: center;
      margin-bottom: 1rem;
      &::before {
        content: "";
        position: absolute;
        width: 100%;
        border-bottom: 1px solid $light-gray;
      }
    }

    .pledge-content {
      display: flex;
      justify-content: space-between;
      width: 100%;
      padding: 0 18px;
    }

    .pledge-content-heading {
      margin-top: 1rem;
      font-size: 1rem;
      color: $dark-gray;
      font-weight: 500;
    }

    .pledge-input-container {
      position: relative;
      margin: 30px 0px;

      .dollar-sign {
        position: absolute;
        left: 5px;
        top: 14px;
        padding-left: 10px;
        color: $light-gray;
      }

      input[type="number"] {
        padding: 15px 25px;
        width: 93px;
        border-radius: 20px;
        border: 1px solid $light-gray;
        font-weight: bold;
        font-size: 1rem;
        text-align: center;
      }
    }
    .pledge-no-reward-cta,
    .pledge-amount-cta {
      align-self: center;
      width: 130px;
      height: 50px;
      border-radius: 20px;
      border: 1px solid $moderate-cyan;
      background-color: $moderate-cyan;
      color: $very-light-gray-white;
      font-weight: bold;
      cursor: pointer;
    }

    .pledge-content-no-reward {
      .pledge-no-reward-cta {
        position: relative;
        bottom: 10px;
      }
    }

}

}

// BODY

body {
  font-family: $font-commissioner;
  background-color: $very-light-gray-white;
  color: $black;
}

// MENUS TOGGLER
.expanded {
  opacity: 1;
  pointer-events: auto;
  transition: max-height 200ms ease-in, opacity 250ms ease-in,
    transform 300ms ease-in;
  max-height: 120px;
  transform: translateY(0);
}
/* ... */

